Add AbstractDemo